//file:noinspection GroovyAssignabilityCheck
def localRoot = project
Project.metaClass.easyPath = {
    //noinspection GroovyAssignabilityCheck
    sourceSets.main.java.srcDirs = ["src/", "$buildDir/generated/sources/annotationProcessor/java/main", "generated/"]
    //noinspection GroovyAssignabilityCheck
    sourceSets.test.java.srcDirs = ["test/"]
    //noinspection GroovyAssignabilityCheck
    sourceSets.test.resources.srcDirs = ["test/resources"]
}
allprojects {}
subprojects {
    apply plugin: 'maven-publish'
    group = 'com.github.Zelaux.asm-ext'
    version = "1.0.5"
    ext.localRoot = localRoot
    ext.all_exports = [
            'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.code.Symbol=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.code.Type=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.tree.JCTree=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
    ]
    ext.aproj = { String name ->
        if (localRoot == rootProject) return project(":" + name)
        Project proj = localRoot
        for (final def part in name.split(':')) {
            if (part == "") continue
            proj = proj.childProjects[part]
        }
        return proj
    }
    repositories {
        mavenCentral()
    }

    ext.devAnnotations = ext.aproj("dev-annotations");
    if (subprojects.size() == 0) {

        tasks.withType(JavaCompile).configureEach {
            targetCompatibility = 17
            sourceCompatibility = 17
            options.fork = true

            options.forkOptions.jvmArgs += [
                    '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                    '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                    '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
                    '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                    '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                    '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                    '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                    '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED',
            ]
        }
        apply plugin: "java-library"
        ext.easyPath = { project.easyPath() }
        if (!new File(project.projectDir, "build.gradle").exists()) {
            project.easyPath()
        }
        dependencies {
            ext.asmUtils = { implementation "org.ow2.asm:asm-util:$asmVersion" }
            ext.asmTree = { implementation "org.ow2.asm:asm-tree:$asmVersion" }
            ext.asmAnalysis = { implementation "org.ow2.asm:asm-analysis:$asmVersion" }
            ext.testAsmUtils = { testImplementation "org.ow2.asm:asm-util:$asmVersion" }
            ext.testAsmTree = { testImplementation "org.ow2.asm:asm-tree:$asmVersion" }
            ext.testAsmAnalysis = { testImplementation "org.ow2.asm:asm-analysis:$asmVersion" }
        }
        ext {
            foox = { -> "org.ow2.asm:asm:$asmVersion" }
        }
        dependencies {
            testAsmUtils()
            testImplementation platform("org.junit:junit-bom:$junitVersion")
            testImplementation 'org.junit.jupiter:junit-jupiter'

            implementation "org.ow2.asm:asm:$asmVersion"
//              implementation "org.ow2.asm:asm-tree:$asmVersion"
//            implementation "org.ow2.asm:asm-analysis:$asmVersion"
//            ext.asmCommons={
//            }
            testImplementation "org.ow2.asm:asm-commons:$asmVersion"

            if (project != devAnnotations) compileOnly devAnnotations
            compileOnly "org.jetbrains:annotations:$jetbrainsAnnoVersion"
            testCompileOnly "org.jetbrains:annotations:$jetbrainsAnnoVersion"


            compileOnly "org.projectlombok:lombok:$lombokVersion"
            annotationProcessor "org.projectlombok:lombok:$lombokVersion"
            testCompileOnly "org.projectlombok:lombok:$lombokVersion"
            testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
        }
        test {
            useJUnitPlatform()
        }

        tasks.withType(Javadoc).configureEach {
            options {
                addStringOption('Xdoclint:none', '-quiet')
                encoding('UTF-8')
            }
        }
        javadoc {
            options.encoding = 'UTF-8'
            options.memberLevel = JavadocMemberLevel.PUBLIC
            options.addStringOption("Xdoclint:none", "-quiet")

            failOnError = false
        }

        task sourcesJar(type: Jar, dependsOn: classes) {
            archiveClassifier = 'sources'
            from sourceSets.main.allSource
        }
    }
}
ext.asmLibRoot = project

String calculateName(Project proj) {
    //    Set<Project> projects = System.getenv("JITPACK") != "true" ? rootProject.subprojects - project(":test") : rootProject.subprojects
    if (proj.parent == asmLibRoot) return proj.name
    return calculateName(proj.parent) + "-" + proj.name
}


void configure1(Project project) {
    if (project.subprojects.size() != 0) return
    //noinspection GroovyAssignabilityCheck
    println(project.group + ":" + calculateName(project) + ":" + project.version)
    configure(project) {
        ext.asmRoot = asmLibRoot

        compileJava {
            options.fork = true
            options.incremental = true
        }

        java {
            withJavadocJar()
            withSourcesJar()
        }
        def selfProject = project
        publishing {
            publications {
                maven(MavenPublication) {
                    if (selfProject.name != "unshadowed-lombok") {
                        from components.java
                    } else {
                        println("shadow")
                    }
//                    group = selfProject.group
//                    version = selfProject.version
                    artifactId = calculateName(selfProject)
                }
            }
        }

    }
}

subprojects { configure1(project) }

void eachChild(Set<Project> set) {
    configure(set) {
        dependencies {
            if (subprojects.size() == 0) {
                compileOnly "org.jetbrains:annotations:$jetbrainsAnnoVersion"
//                testImplementation "junit:junit:$junitVersion"
//                testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.8.2")
            }
        }
        //        sourceSets
        eachChild(subprojects)
    }
}


eachChild(subprojects)
afterEvaluate {

    //    tasks.getByName('publishToMavenLocal').execute()
}
